objects/HealthCloudGA__OpportunityReferralRecordType__mdt.object
<CustomObject>
    <description>Defines the Record Type for Opportunity Referrals in Health Cloud</description>
    <fields>
        <fullName>HealthCloudGA__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__OpportunityRecordTypeName__c</fullName>
        <description>Name of record type on Opportunity object which is valid for Health Cloud</description>
        <label>Opportunity Record Type Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__OpportunityReferralRecordTypeNamespace__c</fullName>
        <description>Opportunity referral record type namespace.</description>
        <label>Record Type Namespace</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Referral Record Type</label>
    <pluralLabel>Opportunity Referral Record Types</pluralLabel>
</CustomObject>